--- a/integradorUno/interfacesMapeo/interfacesMapeo.csproj
+++ b/integradorUno/interfacesMapeo/interfacesMapeo.csproj
@@ -41,11 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="iCiudad.cs" />
-    <Compile Include="iCiudadMapper.cs" />
-    <Compile Include="iHorarioMapper.cs" />
-    <Compile Include="iOmnibusMapper.cs" />
-    <Compile Include="iPasajeMapper.cs" />
-    <Compile Include="iTramoMapper.cs" />
+    <Compile Include="iTramo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
