--- a/integradorUno/integradorUno/Web.config
+++ b/integradorUno/integradorUno/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="Conn" connectionString="Data Source=DESKTOP-6BB7657\Carlos;Initial Catalog=integradorUno;Integrated Security=SSPI;" />
+    <add name="Conn" connectionString="Data Source=DESKTOP-6BB7657\Carlos;Initial Catalog=integradorUnoPrueba;Integrated Security=SSPI;" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
