--- a/integradorUno/integradorUno/integradorUno.csproj
+++ b/integradorUno/integradorUno/integradorUno.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="horarios.aspx" />
     <Content Include="omnibusABM.aspx" />
     <Content Include="packages.config" />
     <Content Include="principal.Master" />
@@ -83,6 +84,13 @@
   <ItemGroup>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="horarios.aspx.cs">
+      <DependentUpon>horarios.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="horarios.aspx.designer.cs">
+      <DependentUpon>horarios.aspx</DependentUpon>
     </Compile>
     <Compile Include="omnibusABM.aspx.cs">
       <DependentUpon>omnibusABM.aspx</DependentUpon>
