--- a/integradorUno/integradorUno/integradorUno.csproj
+++ b/integradorUno/integradorUno/integradorUno.csproj
@@ -68,20 +68,25 @@
     <Content Include="CSS\estilos.css" />
     <Content Include="frmHorarios.aspx" />
     <Content Include="frmPasaje.aspx" />
+    <Content Include="frmTramos.aspx" />
     <Content Include="omnibusABM.aspx" />
     <Content Include="packages.config" />
     <Content Include="principal.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
     </None>
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
     </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
     <Content Include="tramosss.aspx" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="frmHorarios.aspx.cs">
@@ -97,6 +102,13 @@
     </Compile>
     <Compile Include="frmPasaje.aspx.designer.cs">
       <DependentUpon>frmPasaje.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="frmTramos.aspx.cs">
+      <DependentUpon>frmTramos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="frmTramos.aspx.designer.cs">
+      <DependentUpon>frmTramos.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
